membuat pages dan component todo

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,6 +134,8 @@ html {
 .todos {
   display: flex;
   flex-direction: column;
+
+  min-height: 500px;
 }
 
 .todo {
@@ -142,7 +144,7 @@ html {
   flex: 1 0 auto;
   text-align: center;
 
-  min-height: 34px;
+  max-height: 34px;
   margin: 16px 0 0;
   font-family: "Homemade Apple", sans-serif;
   font-size: 24px;
@@ -151,6 +153,8 @@ html {
 }
 
 .todo-text {
+  width: 100%;
+  height: 50px;
   position: absolute;
   left: 50%;
   transform: translate(-50%);
